--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="hp">
         <div id="currentPlayerHp"></div><div id="maxPlayerHp"></div>
       </div>
+      <ul id="logs" class="logs"></ul>
       <button id="attack" class="attack">攻撃する</button>
     </section>
 
