--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <div class="hp">
         <div id="currentPlayerHp"></div><div id="maxPlayerHp"></div>
       </div>
+      <div class="playerStatus">
+        <div class="killedNumbers">
+          討伐数：<div id="nowKilledNumber"></div><div id="targetKillNumber"></div>
+        </div>
+      </div>
       <ul id="logs" class="logs"></ul>
       <button id="attack" class="attack">攻撃する</button>
     </section>
