--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
     </section>
 
   </main>
+  <div class="mask" id="mask"></div>
+  <div class="modal" id="modal">
+    <h2 class="modalTitle" id="modalTitle"></h2>
+    <a class="modalNextBtn" id="modalNextBtn">次へすすむ</a>
+  </div>
 </body>
 </html>
